oprava duplicitního keymapu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,14 @@ project(ZOOProjekt)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ZOOProjekt main.cpp)
+add_executable(ZOOProjekt main.cpp
+        Game.cpp
+        Dungeon.cpp
+        Inventory.cpp
+        Character.cpp
+        Armor.cpp
+        Hero.cpp
+        Item.cpp
+        Monster.cpp
+        Potion.cpp
+        Sword.cpp)
